feat(pkg): add pkg time
This package is used to control how we utilize the time package across
the Deis Platform, including application logs, component logs, API
datetime structures, etc.

--- a/builder/Makefile
+++ b/builder/Makefile
@@ -4,31 +4,19 @@ COMPONENT = builder
 IMAGE = $(IMAGE_PREFIX)$(COMPONENT):$(BUILD_TAG)
 DEV_IMAGE = $(DEV_REGISTRY)/$(IMAGE)
 BUILD_IMAGE := $(COMPONENT)-build
+BINARIES := extract-domain extract-types extract-version generate-buildhook get-app-config get-app-values publish-release-controller yaml2json-procfile
 BINARY_DEST_DIR := image/bin
 
 build: check-docker
-	cp -pR ../Godeps .
-	docker build -t $(BUILD_IMAGE) .
-	docker cp `docker create $(BUILD_IMAGE)`:/go/bin/extract-domain $(BINARY_DEST_DIR)/
-	docker cp `docker create $(BUILD_IMAGE)`:/go/bin/extract-types $(BINARY_DEST_DIR)/
-	docker cp `docker create $(BUILD_IMAGE)`:/go/bin/extract-version $(BINARY_DEST_DIR)/
-	docker cp `docker create $(BUILD_IMAGE)`:/go/bin/generate-buildhook $(BINARY_DEST_DIR)/
-	docker cp `docker create $(BUILD_IMAGE)`:/go/bin/get-app-config $(BINARY_DEST_DIR)/
-	docker cp `docker create $(BUILD_IMAGE)`:/go/bin/get-app-values $(BINARY_DEST_DIR)/
-	docker cp `docker create $(BUILD_IMAGE)`:/go/bin/publish-release-controller $(BINARY_DEST_DIR)/
-	docker cp `docker create $(BUILD_IMAGE)`:/go/bin/yaml2json-procfile $(BINARY_DEST_DIR)/
+	for i in $(BINARIES); do \
+		GOOS=linux GOARCH=amd64 CGO_ENABLED=0 godep go build -a -v -ldflags '-s' -o $(BINARY_DEST_DIR)/$$i bin/$$i.go ; \
+	done
 	docker build -t $(IMAGE) image
 
 clean: check-docker check-registry
-	rm -rf Godeps
-	rm -f $(BINARY_DEST_DIR)/extract-domain
-	rm -f $(BINARY_DEST_DIR)/extract-types
-	rm -f $(BINARY_DEST_DIR)/extract-version
-	rm -f $(BINARY_DEST_DIR)/generate-buildhook
-	rm -f $(BINARY_DEST_DIR)/get-app-config
-	rm -f $(BINARY_DEST_DIR)/get-app-values
-	rm -f $(BINARY_DEST_DIR)/publish-release-controller
-	rm -f $(BINARY_DEST_DIR)/yaml2json-procfile
+	for i in $(BINARIES); do \
+		rm -rf $(BINARY_DEST_DIR)/$$i ; \
+	done
 	docker rmi $(IMAGE)
 
 full-clean: check-docker check-registry clean
