--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ deisctl/makeself/
 docs/_build/
 docs/docs.zip
 logspout/build/
+logspout/image/logspout
 logspout/Godeps/
 publisher/Godeps/
 router/Godeps/
