fix(deisctl): hook up unit tests

--- a/deisctl/Makefile
+++ b/deisctl/Makefile
@@ -36,5 +36,7 @@ test-style:
 	go vet ./...
 	-golint ./...
 
-test: test-style
+test-unit:
 	godep go test -v -cover ./...
+
+test: test-style test-unit
