feat(contrib/coreos): add etcd debug unit
This adds an optional service to aid in debugging etcd issues.
Note that it's only enabled in the cloud-config file, not started.
This enables users to `sudo systemctl start debug-etcd` on a machine
before performing tasks which may strain etcd (such as heavy IO),
and then watch the service's journal to see how things like heartbeat
intervals change.

--- a/contrib/coreos/user-data.example
+++ b/contrib/coreos/user-data.example
@@ -56,6 +56,16 @@ coreos:
       ExecStart=/sbin/hwclock --systohc --utc
       RemainAfterExit=yes
       Type=oneshot
+  - name: debug-etcd.service
+    command: enable
+    content: |
+      [Unit]
+      Description=etcd debugging service
+
+      [Service]
+      ExecStartPre=/usr/bin/curl -sSL -o /opt/bin/jq http://stedolan.github.io/jq/download/linux64/jq
+      ExecStartPre=/usr/bin/chmod +x /opt/bin/jq
+      ExecStart=/usr/bin/bash -c "while true; do curl -sL http://127.0.0.1:4001/v2/stats/leader | /opt/bin/jq . ; sleep 1 ; done"
 write_files:
   - path: /etc/deis-release
     content: |
