feat(docker): add env DEIS_RELEASE

--- a/builder/image/slugbuilder/Dockerfile
+++ b/builder/image/slugbuilder/Dockerfile
@@ -11,3 +11,6 @@ ENV HOME /app
 ADD ./builder/ /tmp/builder
 RUN /tmp/builder/install-buildpacks
 ENTRYPOINT ["/tmp/builder/build.sh"]
+
+ENV DEIS_RELEASE 1.2.0-dev
+
