--- a/database/Makefile
+++ b/database/Makefile
@@ -49,5 +49,6 @@ test-unit:
 	@echo no unit tests
 
 test-functional:
+	@docker history deis/mock-store >/dev/null 2>&1 || $(MAKE) -C ../tests/ mock-store
 	@docker history deis/test-etcd >/dev/null 2>&1 || docker pull deis/test-etcd:latest
 	GOPATH=`cd ../tests/ && godep path`:$(GOPATH) go test -v ./tests/...
