fix(*): force tags in Makefiles
When running `make build`, sometimes components fail to build,
aborting the Makefile run. After fixing the issue, building again,
and running `make dev-release`, some components
have already been tagged and emit an error like "Tag asdf already
references image bcde".

This commit makes `docker tag` force the tag, preventing
a semi-successful build from preventing releases.

--- a/logspout/Makefile
+++ b/logspout/Makefile
@@ -38,7 +38,7 @@ run: install start
 dev-release: push set-image
 
 push: check-registry
-	docker tag $(RELEASE_IMAGE) $(DEV_DOCKER_IMAGE)
+	docker tag -f $(RELEASE_IMAGE) $(DEV_DOCKER_IMAGE)
 	docker push $(DEV_DOCKER_IMAGE)
 
 set-image: check-deisctl
