--- a/publisher/Makefile
+++ b/publisher/Makefile
@@ -26,7 +26,7 @@ install: check-deisctl
 dev-release: push set-image
 
 push: check-registry
-	docker tag $(RELEASE_IMAGE) $(REMOTE_IMAGE)
+	docker tag -f $(RELEASE_IMAGE) $(REMOTE_IMAGE)
 	docker push $(REMOTE_IMAGE)
 
 set-image: check-deisctl
