test(*): enforce gofmt
This PR enforces and suggests that the codebase should follow a specific
style using a combination of `gofmt`, `golint` and `go vet`. `gofmt` is
enforced; the latter are suggested and displayed.

--- a/builder/Makefile
+++ b/builder/Makefile
@@ -1,6 +1,13 @@
 include ../includes.mk
 
-COMPONENT = builder
+# the filepath to this repository, relative to $GOPATH/src
+repo_path = github.com/deis/deis/builder
+
+GO_FILES = types.go utils.go utils_test.go
+GO_PACKAGES = bin
+GO_PACKAGES_REPO_PATH = $(addprefix $(repo_path)/,$(GO_PACKAGES))
+
+COMPONENT = $(notdir $(repo_path))
 IMAGE = $(IMAGE_PREFIX)$(COMPONENT):$(BUILD_TAG)
 DEV_IMAGE = $(DEV_REGISTRY)/$(IMAGE)
 BINARIES := extract-domain extract-types extract-version generate-buildhook get-app-config get-app-values publish-release-controller yaml2json-procfile
@@ -51,7 +58,7 @@ release:
 
 deploy: build dev-release restart
 
-test: test-unit test-functional
+test: test-style test-unit test-functional
 
 test-unit:
 	godep go test -v .
@@ -59,6 +66,15 @@ test-unit:
 test-functional:
 	@docker history deis/test-etcd >/dev/null 2>&1 || docker pull deis/test-etcd:latest
 	GOPATH=`cd ../tests/ && godep path`:$(GOPATH) go test -v ./tests/...
+
+test-style:
+# display output, then check
+	$(GOFMT) $(GO_PACKAGES) $(GO_FILES)
+	@$(GOFMT) $(GO_PACKAGES) $(GO_FILES) | read; if [ $$? == 0 ]; then echo "gofmt check failed."; exit 1; fi
+# FIXME: make this mandatory
+	-$(GOVET) $(repo_path) $(GO_PACKAGES_REPO_PATH)
+# FIXME: make this mandatory
+	-$(GOLINT) ./...
 
 cedarish/build:
 	mkdir -p build
