--- a/logspout/Makefile
+++ b/logspout/Makefile
@@ -1,6 +1,13 @@
 include ../includes.mk
 
-COMPONENT := logspout
+# the filepath to this repository, relative to $GOPATH/src
+repo_path = github.com/deis/deis/logspout
+
+GO_FILES = attacher.go logspout.go routes.go types.go
+GO_PACKAGES = utils
+GO_PACKAGES_REPO_PATH = $(addprefix $(repo_path)/,$(GO_PACKAGES))
+
+COMPONENT = $(notdir $(repo_path))
 DOCKER_IMAGE := deis/$(COMPONENT)
 RELEASE_IMAGE := $(DOCKER_IMAGE):$(BUILD_TAG)
 DEV_DOCKER_IMAGE := $(DEV_REGISTRY)/$(RELEASE_IMAGE)
@@ -47,8 +54,6 @@ release:
 
 deploy: build dev-release restart
 
-test: test-unit test-functional
-
 setup-root-gotools:
 	sudo GOPATH=/tmp/tmpGOPATH go get -u -v code.google.com/p/go.tools/cmd/cover
 	sudo GOPATH=/tmp/tmpGOPATH go get -u -v code.google.com/p/go.tools/cmd/vet
@@ -57,12 +62,19 @@ setup-root-gotools:
 setup-gotools:
 	go get -v github.com/golang/lint/golint
 
-test-style:
-	go vet -x ./...
-	-golint ./...
-
-test-unit: test-style
-	@echo no tests
+test: test-style test-unit test-functional
 
 test-functional:
 	@echo no functional tests
+
+test-style:
+# display output, then check
+	$(GOFMT) $(GO_PACKAGES) $(GO_FILES)
+	@$(GOFMT) $(GO_PACKAGES) $(GO_FILES) | read; if [ $$? == 0 ]; then echo "gofmt check failed."; exit 1; fi
+# FIXME: make this mandatory
+	-$(GOVET) $(repo_path) $(GO_PACKAGES_REPO_PATH)
+# FIXME: make this mandatory
+	-$(GOLINT) ./...
+
+test-unit:
+	@echo no unit tests
