--- a/publisher/Makefile
+++ b/publisher/Makefile
@@ -1,6 +1,14 @@
 include ../includes.mk
 
-DOCKER_IMAGE := deis/publisher
+# the filepath to this repository, relative to $GOPATH/src
+repo_path = github.com/deis/deis/publisher
+
+GO_FILES = main.go
+GO_PACKAGES = server
+GO_PACKAGES_REPO_PATH = $(addprefix $(repo_path)/,$(GO_PACKAGES))
+
+COMPONENT = $(notdir $(repo_path))
+DOCKER_IMAGE := $(IMAGE_PREFIX)$(COMPONENT)
 BUILD_IMAGE := $(DOCKER_IMAGE)-build
 RELEASE_IMAGE := $(DOCKER_IMAGE):$(BUILD_TAG)
 REMOTE_IMAGE := $(REGISTRY)/$(RELEASE_IMAGE)
@@ -47,10 +55,19 @@ start: check-deisctl
 stop: check-deisctl
 	deisctl stop publisher
 
-test: test-unit
+test: test-style test-unit test-functional
 
 test-functional:
 	@echo no functional tests
+
+test-style:
+# display output, then check
+	$(GOFMT) $(GO_PACKAGES) $(GO_FILES)
+	@$(GOFMT) $(GO_PACKAGES) $(GO_FILES) | read; if [ $$? == 0 ]; then echo "gofmt check failed."; exit 1; fi
+# FIXME: make this mandatory
+	-$(GOVET) $(repo_path) $(GO_PACKAGES_REPO_PATH)
+# FIXME: make this mandatory
+	-$(GOLINT) ./...
 
 test-unit:
 	godep go test -v ./...
