--- a/publisher/image/Dockerfile
+++ b/publisher/image/Dockerfile
@@ -1,6 +1,6 @@
-FROM scratch
+FROM ubuntu-debootstrap:14.04
 
-ADD publisher /usr/local/bin/publisher
+ADD bin/publisher /usr/local/bin/publisher
 ENTRYPOINT ["/usr/local/bin/publisher"]
 
 ENV DEIS_RELEASE 1.4.0-dev
