ref(router): enforce HTTPs applies to controller too

--- a/router/image/templates/nginx.conf
+++ b/router/image/templates/nginx.conf
@@ -55,6 +55,8 @@ http {
         ''      close;
     }
 
+    {{ $enforceHTTPS := or .deis_router_enforceHTTPS "false" }}
+
     ## start deis-controller
     {{ if .deis_controller_host }}
     upstream deis-controller {
@@ -88,6 +90,12 @@ http {
         {{ if eq $useFirewall "true" }}location /RequestDenied {
             return {{ $firewallErrorCode }};
         }{{ end }}
+
+        {{ if eq $enforceHTTPS "true" }}
+        if ($http_x_forwarded_proto != "https") {
+          rewrite ^(.*)$ https://$host$1 permanent;
+        }
+        {{ end }}
     }
     ## end deis-controller
 
@@ -127,7 +135,6 @@ http {
 
     ## start service definitions for each application
     {{ $useSSL := or .deis_router_sslCert "false" }}
-    {{ $enforceHttps := or .deis_router_enforceHttps "false" }}
     {{ $domains := .deis_domains }}{{ range $service := .deis_services }}{{ if $service.Nodes }}
     upstream {{ Base $service.Key }} {
         {{ range $upstream := $service.Nodes }}server {{ $upstream.Value }};
@@ -158,7 +165,7 @@ http {
 
             proxy_next_upstream         error timeout http_502 http_503 http_504;
 
-            {{ if ne $enforceHttps "false" }}
+            {{ if eq $enforceHTTPS "true" }}
             if ($http_x_forwarded_proto != "https") {
               rewrite ^(.*)$ https://$host$1 permanent;
             }
