feat(router): PROXY protocol support

--- a/router/image/templates/deis.conf
+++ b/router/image/templates/deis.conf
@@ -1,9 +1,9 @@
 server_name_in_redirect off;
 port_in_redirect off;
-listen 80;
+listen 80{{ if .deis_router_proxyProtocol }} proxy_protocol{{ end }};
 
 {{ if .deis_router_sslCert }}
-listen 443 ssl spdy;
+listen 443 ssl spdy{{ if .deis_router_proxyProtocol }} proxy_protocol{{ end }};
 ssl_certificate /etc/ssl/deis.cert;
 ssl_certificate_key /etc/ssl/deis.key;
 ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
