feat(*): use alpine linux.

--- a/builder/image/Dockerfile
+++ b/builder/image/Dockerfile
@@ -1,9 +1,7 @@
-FROM ubuntu-debootstrap:14.04
-
-ENV DEBIAN_FRONTEND noninteractive
+FROM alpine:3.1
 
 # install common packages
-RUN apt-get update && apt-get install -y curl net-tools sudo
+RUN apk add --update-cache curl bash sudo && rm -rf /var/cache/apk/*
 
 # install etcdctl
 RUN curl -sSL -o /usr/local/bin/etcdctl https://s3-us-west-2.amazonaws.com/opdemand/etcdctl-v0.4.6 \
@@ -13,28 +11,32 @@ RUN curl -sSL -o /usr/local/bin/etcdctl https://s3-us-west-2.amazonaws.com/opdem
 RUN curl -sSL -o /usr/local/bin/confd https://github.com/kelseyhightower/confd/releases/download/v0.9.0/confd-0.9.0-linux-amd64 \
     && chmod +x /usr/local/bin/confd
 
-# install docker-in-docker
-RUN echo "deb http://get.docker.com/ubuntu docker main" > /etc/apt/sources.list.d/docker.list
-RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 36A1D7869245C8950F966E92D8576A8BA88D21E9
+RUN apk add --update-cache \
+    coreutils \
+    device-mapper \
+    e2fsprogs \
+    git \
+    iptables \
+    libudev \
+    lxc \
+    openssh \
+    udev \
+    util-linux \
+    xz \
+    && rm -rf /var/cache/apk/*
 
-# install builder, docker, and hook dependencies
-RUN apt-get update && apt-get install -yq \
-    openssh-server git \
-    aufs-tools iptables lxc \
-    lxc-docker-1.5.0
+# the docker package in alpine disables aufs and devicemapper
+RUN curl -sSL https://get.docker.com/builds/Linux/x86_64/docker-1.5.0 -o /usr/bin/docker && \
+  chmod +x /usr/bin/docker
 
 # configure ssh server
-RUN rm /etc/ssh/ssh_host_*
-RUN dpkg-reconfigure openssh-server
-RUN mkdir -p /var/run/sshd
-
-# configure locale
-RUN echo LANG="en_US.UTF-8" > /etc/default/locale && dpkg-reconfigure locales
+RUN mkdir -p /var/run/sshd && rm -rf /etc/ssh/ssh_host*
+RUN /usr/bin/ssh-keygen -A
 
 # install git and configure gituser
 ENV GITHOME /home/git
 ENV GITUSER git
-RUN useradd -d $GITHOME $GITUSER
+RUN adduser -D -h $GITHOME $GITUSER
 RUN mkdir -p $GITHOME/.ssh && chown git:git $GITHOME/.ssh
 RUN chown -R $GITUSER:$GITUSER $GITHOME
 
@@ -46,12 +48,14 @@ WORKDIR /app
 ENTRYPOINT ["/app/bin/entry"]
 CMD ["/app/bin/boot"]
 EXPOSE 22
-RUN addgroup --quiet --gid 2000 slug && useradd slug --uid=2000 --gid=2000
+RUN addgroup -g 2000 slug && adduser -D -u 2000 -G slug slug
 
 # $GITUSER is added to docker group to use docker without sudo and to slug
 # group in order to share resources with the slug user
-RUN usermod -a -G docker $GITUSER
-RUN usermod -a -G slug $GITUSER
+RUN addgroup -S docker
+RUN addgroup $GITUSER docker
+RUN addgroup $GITUSER slug
+RUN passwd -u git
 
 ADD templates/shim.dockerfile /home/git/
 ADD etc /etc
