--- a/router/Makefile
+++ b/router/Makefile
@@ -11,12 +11,13 @@ COMPONENT = $(notdir $(repo_path))
 IMAGE = $(IMAGE_PREFIX)$(COMPONENT):$(BUILD_TAG)
 DEV_IMAGE = $(DEV_REGISTRY)/$(IMAGE)
 BUILD_IMAGE = $(COMPONENT)-build
+BINARY_DEST_DIR = image/bin
 
 build: check-docker
 	cp -pR ../Godeps .
 	docker build -t $(BUILD_IMAGE) .
-	docker cp `docker run -d $(BUILD_IMAGE)`:/nginx.tgz image/
-	docker cp `docker run -d $(BUILD_IMAGE)`:/go/bin/boot image/bin/
+	docker cp `docker run -d $(BUILD_IMAGE) /bin/bash`:/nginx.tgz image/
+	GOOS=linux GOARCH=amd64 CGO_ENABLED=0 godep go build -a -installsuffix -v -ldflags '-s' -o $(BINARY_DEST_DIR)/boot boot.go || exit 1
 	$(call check-static-binary,image/bin/boot)
 	docker build -t $(IMAGE) image
 	rm image/nginx.tgz
