--- a/router/image/templates/nginx.conf
+++ b/router/image/templates/nginx.conf
@@ -1,7 +1,7 @@
 # required to run in a container
 daemon off;
 
-user www-data;
+user nginx;
 worker_processes {{ or (getv "/deis/router/workerProcesses") "auto" }};
 pid /run/nginx.pid;
 
