--- a/router/Dockerfile
+++ b/router/Dockerfile
@@ -1,19 +1,14 @@
-FROM golang:1.4
+FROM alpine:3.1
+
+# install common packages
+RUN apk add --update-cache curl bash sudo && rm -rf /var/cache/apk/*
 
 ADD firewall /tmp/firewall
 
-ADD build.sh /go/src/github.com/deis/deis/router/build.sh
+ADD build.sh /tmp/build.sh
 
-WORKDIR /go/src/github.com/deis/deis/router
+WORKDIR /tmp
 
-RUN DOCKER_BUILD=true /go/src/github.com/deis/deis/router/build.sh
+RUN mkdir -p /opt/nginx && DOCKER_BUILD=true /tmp/build.sh
 
 RUN tar -C /opt/nginx -czf /nginx.tgz .
-
-RUN go get github.com/tools/godep
-
-ADD . /go/src/github.com/deis/deis/router/
-
-RUN CGO_ENABLED=0 godep go build -a -installsuffix cgo -ldflags '-s' boot.go
-
-RUN cp /go/src/github.com/deis/deis/router/boot /go/bin/boot
