--- a/tests/fixtures/mock-store/Dockerfile
+++ b/tests/fixtures/mock-store/Dockerfile
@@ -1,6 +1,7 @@
-FROM ubuntu-debootstrap:14.04
+FROM alpine:3.1
 
-ENV DEBIAN_FRONTEND noninteractive
+# install common packages
+RUN apk add --update-cache curl bash sudo && rm -rf /var/cache/apk/*
 
 WORKDIR /app
 EXPOSE 8888
