feat(cloud-init): check if deisctl does not exists before install it

--- a/contrib/coreos/user-data.example
+++ b/contrib/coreos/user-data.example
@@ -37,6 +37,7 @@ coreos:
     content: |
       [Unit]
       Description=Install deisctl utility
+      ConditionPathExists=!/opt/bin/deisctl
 
       [Service]
       Type=oneshot
