--- a/builder/image/slugbuilder/Dockerfile
+++ b/builder/image/slugbuilder/Dockerfile
@@ -12,5 +12,5 @@ ADD ./builder/ /tmp/builder
 RUN /tmp/builder/install-buildpacks
 ENTRYPOINT ["/tmp/builder/build.sh"]
 
-ENV DEIS_RELEASE 1.4.0-dev
+ENV DEIS_RELEASE 1.4.0
 
