ref(store): remove apache from ceph gateway

--- a/store/base/templates/ceph.conf
+++ b/store/base/templates/ceph.conf
@@ -12,6 +12,8 @@ osd pool default pg_num = {{ .deis_store_pgNum }}
 osd pool default pgp_num = {{ .deis_store_pgNum }}
 osd recovery delay start = {{ .deis_store_delayStart }}
 log file = /dev/stdout
+rgw_frontends = "civetweb port=8888"
+rgw_thread_pool_size = 512
 
 [client.radosgw.gateway]
 host = deis-store-gateway
