feat(makefile): check that generated go binaries are statically linked

--- a/builder/Makefile
+++ b/builder/Makefile
@@ -16,6 +16,7 @@ BINARY_DEST_DIR := image/bin
 build: check-docker
 	for i in $(BINARIES); do \
 		GOOS=linux GOARCH=amd64 CGO_ENABLED=0 godep go build -a -installsuffix cgo -v -ldflags '-s' -o $(BINARY_DEST_DIR)/$$i bin/$$i.go || exit 1; \
+		$(call check-static-binary,$(BINARY_DEST_DIR)/$$i) \
 	done
 	docker build -t $(IMAGE) image
 
