--- a/logger/Makefile
+++ b/logger/Makefile
@@ -15,6 +15,7 @@ BINARY_DEST_DIR = image/bin
 
 build: check-docker
 	GOOS=linux GOARCH=amd64 CGO_ENABLED=0 godep go build -a -installsuffix cgo -v -ldflags '-s' -o $(BINARY_DEST_DIR)/logger github.com/deis/deis/logger || exit 1
+	$(call check-static-binary,$(BINARY_DEST_DIR)/logger)
 	docker build -t $(IMAGE) image
 
 clean: check-docker check-registry
