--- a/router/image/templates/nginx.conf
+++ b/router/image/templates/nginx.conf
@@ -141,6 +141,7 @@ http {
     ## start service definitions for each application
     {{ $useSSL := or .deis_router_sslCert "false" }}
     {{ $affinityArg := .deis_router_affinityArg }}
+    {{ $certs := .deis_certs }}
     {{ $domains := .deis_domains }}{{ range $service := .deis_services }}{{ if $service.Nodes }}
     upstream {{ Base $service.Key }} {
         {{ if $affinityArg }}hash $arg_{{ $affinityArg }} consistent;
@@ -152,7 +153,19 @@ http {
 
     server {
         server_name ~^{{ Base $service.Key }}\.(?<domain>.+)${{ range $app_domains := $domains }}{{ if eq (Base $service.Key) (Base $app_domains.Key) }} {{ $app_domains.Value }}{{ end }}{{ end }};
+        {{ range $domain := $domains }}{{ range $cert := $certs }}
+        {{ if eq $domain.Value (Base $cert.Key) }}
+        {{ $useSSL := "true" }}
+        server_name_in_redirect off;
+        port_in_redirect off;
+        listen 80;
+        listen 443 ssl spdy;
+        ssl_certificate /etc/ssl/deis/certs/{{ Base $cert.Key }}.cert;
+        ssl_certificate_key /etc/ssl/deis/keys/{{ Base $cert.Key }}.key;
+        {{ else }}
         include deis.conf;
+        {{ end }}
+        {{ end }}{{ end }}
 
         {{ if $service.Nodes }}
         location / {
