feat(router): avoid regex-based taxing rewrites
for more see http://wiki.nginx.org/Pitfalls#Taxing_Rewrites

--- a/router/image/templates/nginx.conf
+++ b/router/image/templates/nginx.conf
@@ -99,7 +99,7 @@ http {
 
         {{ if eq $enforceHTTPS "true" }}
         if ($access_scheme != "https") {
-          rewrite ^(.*)$ https://$host$1 permanent;
+          return 301 https://$server_name$request_uri;
         }
         {{ end }}
     }
@@ -173,7 +173,7 @@ http {
 
             {{ if eq $enforceHTTPS "true" }}
             if ($access_scheme != "https") {
-              rewrite ^(.*)$ https://$host$1 permanent;
+              return 301 https://$server_name$request_uri;
             }
             {{ end }}
 
