fix(router): allow customomize connection limits

--- a/router/image/templates/nginx.conf
+++ b/router/image/templates/nginx.conf
@@ -2,11 +2,11 @@
 daemon off;
 
 user www-data;
-worker_processes auto;
+worker_processes {{ or (.deis_router_workerProcesses) "auto" }};
 pid /run/nginx.pid;
 
 events {
-    worker_connections 768;
+    worker_connections {{ or (.deis_router_maxWorkerConnections) "768" }};
     # multi_accept on;
 }
 
