feat(cloud-init): temporal fix for ntpd

--- a/contrib/coreos/user-data.example
+++ b/contrib/coreos/user-data.example
@@ -171,3 +171,8 @@ write_files:
     content: |
       [Coredump]
       Storage=none
+  - path: /etc/systemd/system/ntpd.service.d/debug.conf
+    content: |
+      [Service]
+      ExecStart=
+      ExecStart=/usr/sbin/ntpd -g -n -f /var/lib/ntp/ntp.drift
