fix(user-data): use LimitNOFILE for etcd service

--- a/contrib/coreos/user-data.example
+++ b/contrib/coreos/user-data.example
@@ -20,6 +20,18 @@ coreos:
   units:
   - name: etcd.service
     command: start
+    content: |
+      [Unit]
+      Description=etcd
+      [Service]
+      User=etcd
+      PermissionsStartOnly=true
+      Environment=ETCD_DATA_DIR=/var/lib/etcd
+      Environment=ETCD_NAME=%m
+      ExecStart=/usr/bin/etcd
+      Restart=always
+      RestartSec=10s
+      LimitNOFILE=40000
   - name: fleet.service
     command: start
   - name: stop-update-engine.service
