chore(store): bump confd to v0.8

--- a/store/base/templates/ceph.conf
+++ b/store/base/templates/ceph.conf
@@ -1,16 +1,16 @@
 [global]
-fsid = {{ .deis_store_fsid }}
-mon initial members = {{ .deis_store_monSetupLock }}
-mon host = {{ range $index, $mon := .deis_store_hosts }}{{ if $index }}, {{ end }}{{ $mon.Value }}{{ end }}
-mon addr = {{ range $index, $mon := .deis_store_hosts }}{{ if $index }}, {{ end }}{{ Base $mon.Key }}:6789{{ end }}
+fsid = {{ getv "/deis/store/fsid" }}
+mon initial members = {{ getv "/deis/store/monSetupLock" }}
+mon host = {{ join (getvs "/deis/store/hosts/*") "," }}
+mon addr = {{ join (ls "/deis/store/hosts/*") ":6789 ," }}:6789
 auth cluster required = cephx
 auth service required = cephx
 auth client required = cephx
-osd pool default size = {{ .deis_store_size }}
-osd pool default min_size = {{ .deis_store_minSize }}
-osd pool default pg_num = {{ .deis_store_pgNum }}
-osd pool default pgp_num = {{ .deis_store_pgNum }}
-osd recovery delay start = {{ .deis_store_delayStart }}
+osd pool default size = {{ getv "/deis/store/size" }}
+osd pool default min_size = {{ getv "/deis/store/minSize" }}
+osd pool default pg_num = {{ getv "/deis/store/pgNum" }}
+osd pool default pgp_num = {{ getv "/deis/store/pgNum" }}
+osd recovery delay start = {{ getv "/deis/store/delayStart" }}
 log file = /dev/stdout
 rgw_frontends = "civetweb port=8888"
 rgw_thread_pool_size = 512
