ref(tests): move test containers under tests/fixtures

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -10,6 +10,8 @@ GO_PACKAGES = dockercli etcdutils mock utils
 GO_PACKAGES_REPO_PATH = $(addprefix $(repo_path)/,$(GO_PACKAGES))
 
 MOCK_STORE_IMAGE = $(IMAGE_PREFIX)mock-store:latest
+TEST_ETCD_IMAGE = $(IMAGE_PREFIX)test-etcd:latest
+TEST_POSTGRESQL_IMAGE = $(IMAGE_PREFIX)test-postgresql:latest
 
 test: test-smoke
 
@@ -37,6 +39,12 @@ setup-gotools:
 
 mock-store:
 	docker build -t $(MOCK_STORE_IMAGE) fixtures/mock-store/
+
+test-etcd:
+	docker build -t $(TEST_ETCD_IMAGE) fixtures/test-etcd/
+
+test-postgresql:
+	docker build -t $(TEST_POSTGRESQL_IMAGE) fixtures/test-postgresql/
 
 test-style:
 # display output, then check
