fix array iteration

--- a/contrib/coreos/user-data.example
+++ b/contrib/coreos/user-data.example
@@ -142,8 +142,7 @@ write_files:
       #!/bin/bash
 
       COMPONENTS=(builder cache controller database logger logspout publisher registry router store-daemon store-gateway store-metadata store-monitor store-volume)
-
-      for c in $COMPONENTS; do
+      for c in "${COMPONENTS[@]}"; do
         image=`/run/deis/bin/get_image /deis/$c`
         docker history $image >/dev/null 2>&1 || docker pull $image
       done
