feat(controller): Add users:list

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -29,6 +29,7 @@ test-full: test-style
 	godep go test -tags integration -v -run TestPerms
 	godep go test -tags integration -v -run TestPs
 	godep go test -tags integration -v -run TestReleases
+	godep go test -tags integration -v -run TestUsers
 
 setup-root-gotools:
 	sudo GOPATH=/tmp/tmpGOPATH go get -u -v code.google.com/p/go.tools/cmd/cover
