chore(release): update version in master to v1.5.1

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,8 @@ htmlcov/
 
 # integration test droppings
 tests/example-*
+tests/*.cert
+tests/*.key
 
 # extra .py droppings from building docs
 /__init__.py
